fluxcd/infrastructure/configs/overlays/production/istio-policies/temple-of-time/allow-notify-push-to-nextcloud.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-notify-push-to-nextcloud
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: app
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/nextcloud-notify-push
      to:
        - operation:
            ports: ["80"]
